--- a/assets/component-predictive-search.css
+++ b/assets/component-predictive-search.css
@@ -7,7 +7,7 @@
   border-style: solid;
   border-color: rgba(var(--color-foreground), var(--popup-border-opacity));
   background-color: rgb(var(--color-background));
-  z-index: 3;
+  z-index: 100;
   border-bottom-right-radius: var(--popup-corner-radius);
   border-bottom-left-radius: var(--popup-corner-radius);
   box-shadow: var(--popup-shadow-horizontal-offset) var(--popup-shadow-vertical-offset) var(--popup-shadow-blur-radius)
@@ -17,7 +17,7 @@
 }
 
 .predictive-search--search-template {
-  z-index: 2;
+  z-index: 101; /* Updated this from 2 */
   width: calc(100% + 0.2rem);
 }
 
